--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -258,16 +258,16 @@ CrowdManager=GameMapsSettings.DefaultModes.SelectedGameModeDetails,MoviePlayerSe
 DataDrivenConsoleVariableSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,MoviePlayerSettings.Movies.StartupMovies,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options
 DebugCameraControllerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,MoviePlayerSettings.Movies.StartupMovies,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options
 EnhancedInputDeveloperSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,MoviePlayerSettings.Movies.StartupMovies,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options
-InputModifierDeadZone=GameMapsSettings.DefaultModes.SelectedGameModeDetails,MoviePlayerSettings.Movies.StartupMovies,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options
-InputModifierResponseCurveExponential=GameMapsSettings.DefaultModes.SelectedGameModeDetails,MoviePlayerSettings.Movies.StartupMovies,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options
-InputModifierFOVScaling=GameMapsSettings.DefaultModes.SelectedGameModeDetails,MoviePlayerSettings.Movies.StartupMovies,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options
-InputTriggerDown=GameMapsSettings.DefaultModes.SelectedGameModeDetails,MoviePlayerSettings.Movies.StartupMovies,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options
-InputTriggerPressed=GameMapsSettings.DefaultModes.SelectedGameModeDetails,MoviePlayerSettings.Movies.StartupMovies,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options
-InputTriggerReleased=GameMapsSettings.DefaultModes.SelectedGameModeDetails,MoviePlayerSettings.Movies.StartupMovies,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options
-InputTriggerHold=GameMapsSettings.DefaultModes.SelectedGameModeDetails,MoviePlayerSettings.Movies.StartupMovies,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options
-InputTriggerHoldAndRelease=GameMapsSettings.DefaultModes.SelectedGameModeDetails,MoviePlayerSettings.Movies.StartupMovies,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options
-InputTriggerTap=GameMapsSettings.DefaultModes.SelectedGameModeDetails,MoviePlayerSettings.Movies.StartupMovies,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options
-InputTriggerPulse=GameMapsSettings.DefaultModes.SelectedGameModeDetails,MoviePlayerSettings.Movies.StartupMovies,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options
+InputModifierDeadZone=
+InputModifierResponseCurveExponential=
+InputModifierFOVScaling=
+InputTriggerDown=
+InputTriggerPressed=
+InputTriggerReleased=
+InputTriggerHold=
+InputTriggerHoldAndRelease=
+InputTriggerTap=
+InputTriggerPulse=
 EnhancedInputEditorProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,MoviePlayerSettings.Movies.StartupMovies,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options
 MegascansMaterialParentSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,MoviePlayerSettings.Movies.StartupMovies,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options
 GameplayDebuggerConfig=GameMapsSettings.DefaultModes.SelectedGameModeDetails,MoviePlayerSettings.Movies.StartupMovies,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options
@@ -345,11 +345,11 @@ RawInputSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,MoviePlay
 RenderDocPluginSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,MoviePlayerSettings.Movies.StartupMovies,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options
 ResonanceAudioSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,MoviePlayerSettings.Movies.StartupMovies,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options
 TakeRecorderProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,MoviePlayerSettings.Movies.StartupMovies,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options
-MovieSceneTakeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,MoviePlayerSettings.Movies.StartupMovies,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options
-TakeRecorderMicrophoneAudioSourceSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,MoviePlayerSettings.Movies.StartupMovies,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options
-TakeRecorderMicrophoneAudioManager=GameMapsSettings.DefaultModes.SelectedGameModeDetails,MoviePlayerSettings.Movies.StartupMovies,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options
-MovieSceneAnimationTrackRecorderEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,MoviePlayerSettings.Movies.StartupMovies,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options
-TakeRecorderWorldSourceSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,MoviePlayerSettings.Movies.StartupMovies,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options
+MovieSceneTakeSettings=
+TakeRecorderMicrophoneAudioSourceSettings=
+TakeRecorderMicrophoneAudioManager=
+MovieSceneAnimationTrackRecorderEditorSettings=
+TakeRecorderWorldSourceSettings=
 TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,MoviePlayerSettings.Movies.StartupMovies,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options
 TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,MoviePlayerSettings.Movies.StartupMovies,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,MoviePlayerSettings.Movies.StartupMovies,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options
@@ -359,7 +359,7 @@ WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,MoviePlay
 LastLevel=/Game/_Level/Island
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -2167,7 +2167,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=
+ContentBrowserTab1.SelectedPaths=/Game/_Core/_GameCore/Cutcene
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -3486,6 +3486,8 @@ AnimationEditor.TimeStamp=2024.05.17-19.30.20
 AnimationEditor.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2025.04.25-10.53.35
 SequencerWidgets.LastCompileMethod=External
+ExternalImagePicker.TimeStamp=2025.04.25-10.53.33
+ExternalImagePicker.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
