dsdsdsd FUCK YOU GAME

--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -360,7 +360,7 @@ StaticMeshActor=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.Transfor
 LastLevel=/Game/_Level/Island
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
