Nothign important Iim realy eritated still Arroun 7 or 8 im gonne continue

--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -190,7 +190,7 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Gl
 MaterialInstanceConstant=
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.ImportSettings.Mesh
 MeshNaniteSettings=
-CapsuleComponent=CapsuleComponent.Physics.ConstraintsGroup,DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform
+CapsuleComponent=
 DI_BP_Carpenter_C=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 SkeletalMeshComponent=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,DI_Player_C.Physics.ConstraintsGroup,DI_Player_C.Collision.Collision,CineCameraComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform,BP_Player_DI_C.TransformCommon.Transform,LevelScriptBlueprint.Interfaces.Implemented Interfaces
 DI_Player_C=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,DI_Player_C.Physics.ConstraintsGroup,DI_Player_C.Collision.Collision,CineCameraComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform
@@ -355,6 +355,7 @@ TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDet
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,MoviePlayerSettings.Movies.StartupMovies,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,MoviePlayerSettings.Movies.StartupMovies,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options
 StaticMeshActor=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform
+BP_boss_C=CapsuleComponent.Physics.ConstraintsGroup,DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform
 
 [EditorStartup]
 LastLevel=/Game/_Level/Island
@@ -2032,6 +2033,56 @@ LandscapeEditorObject.Brush Settings=True
 LandscapeEditorObject.Edit Layers=True
 LandscapeEditorObject.Edit Layer Blueprint Brushes=True
 LandscapeEditorObject.Target Layers=True
+BP_boss_C.TransformCommon=True
+BP_boss_C.Animation=True
+BP_boss_C.Mesh=True
+BP_boss_C.Default=True
+BP_boss_C.Physics=True
+BP_boss_C.Collision=True
+BP_boss_C.Lighting=True
+BP_boss_C.Clothing=True
+BP_boss_C.LeaderPoseComponent=True
+BP_boss_C.AnimationRig=True
+BP_boss_C.Deformer=True
+BP_boss_C.SkinWeights=True
+BP_boss_C.Rendering=True
+BP_boss_C.HLOD=True
+BP_boss_C.PathTracing=True
+BP_boss_C.Mobile=True
+BP_boss_C.Navigation=True
+BP_boss_C.RayTracing=True
+BP_boss_C.VirtualTexture=True
+BP_boss_C.Tags=True
+BP_boss_C.AssetUserData=True
+BP_boss_C.Activation=True
+BP_boss_C.Cooking=True
+BP_boss_C.Character Movement (General Settings)=True
+BP_boss_C.Character Movement: Walking=True
+BP_boss_C.Character Movement: Jumping / Falling=True
+BP_boss_C.Character Movement: Gravity=True
+BP_boss_C.Character Movement (Networking)=True
+BP_boss_C.Character Movement: Swimming=True
+BP_boss_C.Character Movement: Flying=True
+BP_boss_C.Character Movement: Custom Movement=True
+BP_boss_C.Character Movement (Rotation Settings)=True
+BP_boss_C.Character Movement: Physics Interaction=True
+BP_boss_C.Character Movement=True
+BP_boss_C.Character Movement: Avoidance=True
+BP_boss_C.RootMotion=True
+BP_boss_C.Character Movement: NavMesh Movement=True
+BP_boss_C.NavMovement=True
+BP_boss_C.Velocity=True
+BP_boss_C.PlanarMovement=True
+BP_boss_C.MovementComponent=True
+BP_boss_C.Shape=True
+BP_boss_C.Character=True
+BP_boss_C.Camera=True
+BP_boss_C.Pawn=True
+BP_boss_C.Replication=True
+BP_boss_C.Networking=True
+BP_boss_C.Input=True
+BP_boss_C.Actor=True
+BP_boss_C.Materials=True
 
 [AssetEditorToolkitTabLocation]
 /Game/_Core/_Player/DI_Player.DI_Player=1
