--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -221,7 +221,7 @@ BillboardComponent=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.Trans
 K2Node_CallFunction=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,DI_Player_C.Physics.ConstraintsGroup,DI_Player_C.Collision.Collision,CineCameraComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform,BP_Player_DI_C.TransformCommon.Transform,LevelScriptBlueprint.Interfaces.Implemented Interfaces
 K2Node=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,DI_Player_C.Physics.ConstraintsGroup,DI_Player_C.Collision.Collision,CineCameraComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform,BP_Player_DI_C.TransformCommon.Transform,LevelScriptBlueprint.Interfaces.Implemented Interfaces
 K2Node_CustomEvent=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,DI_Player_C.Physics.ConstraintsGroup,DI_Player_C.Collision.Collision,CineCameraComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform,BP_Player_DI_C.TransformCommon.Transform,LevelScriptBlueprint.Interfaces.Implemented Interfaces
-K2Node_Variable=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,DI_Player_C.Physics.ConstraintsGroup,DI_Player_C.Collision.Collision,CineCameraComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform,BP_Player_DI_C.TransformCommon.Transform
+K2Node_Variable=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,DI_Player_C.Physics.ConstraintsGroup,DI_Player_C.Collision.Collision,CineCameraComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform,BP_Player_DI_C.TransformCommon.Transform,LevelScriptBlueprint.Interfaces.Implemented Interfaces
 WBP_Captain_Di_C=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,DI_Player_C.Physics.ConstraintsGroup,DI_Player_C.Collision.Collision,CineCameraComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform,BP_Player_DI_C.TransformCommon.Transform
 PlayerController=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,DI_Player_C.Physics.ConstraintsGroup,DI_Player_C.Collision.Collision,CineCameraComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform,BP_Player_DI_C.TransformCommon.Transform
 LevelSequenceActor=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,DI_Player_C.Physics.ConstraintsGroup,DI_Player_C.Collision.Collision,CineCameraComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform,BP_Player_DI_C.TransformCommon.Transform
@@ -364,7 +364,7 @@ Landscape=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommo
 LastLevel=/Game/_Level/Island
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -396,6 +396,8 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
+OpenAssetsAtExit=/Game/_Core/_AdriaanNewShit/Player/BP_Player_DI.BP_Player_DI
+OpenAssetsAtExit=/Game/_Core/_AdriaanNewShit/SaveSystems/CutceneSaveSystem/BP_CutceneSave_DI.BP_CutceneSave_DI
 
 [RootWindow]
 ScreenPosition=X=191.000 Y=103.000
@@ -3560,8 +3562,8 @@ RecentsFiles=D:/Program Files/Epic Games/UE_5.3/Engine/Plugins/MovieScene/MovieR
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/_Core/_AdriaanNewShit/SaveSystems/CutceneSaveSystem/BP_CutceneSave_DI
-MRUItem1=/Game/_Core/_AdriaanNewShit/Actors/SaveGameSys/BP_PlayerStart_DI
-MRUItem2=/Game/_Core/_AdriaanNewShit/Player/BP_Player_DI
+MRUItem1=/Game/_Core/_AdriaanNewShit/Player/BP_Player_DI
+MRUItem2=/Game/_Core/_AdriaanNewShit/Actors/SaveGameSys/BP_PlayerStart_DI
 MRUItem3=/Game/_Core/_GameCore/Cutcene/CutceneLoaderChar
 MRUItem4=/Game/_Level/Cutscenes
 MRUItem5=/Game/_Core/_Player/DI_Player
@@ -3944,8 +3946,8 @@ PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 Object=
 StaticMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-MeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent=
+PrimitiveComponent=
 SceneComponent=
 ActorComponent=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
