Small extra work on free day

--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -201,8 +201,8 @@ PropertyWrapper=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.Transfor
 BP_DI_CarpNew_C=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform,CineCameraComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,BP_DI_CarpNew_C.TransformCommon.Transform,BP_DI_CarpNew_C.Materials.MaterialList,BP_DI_CarpNew_C.Physics.ConstraintsGroup,BP_DI_CarpNew_C.Collision.Collision
 SceneComponent=
 PlayerStart=CapsuleComponent.Physics.ConstraintsGroup,DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform
-EdGraph=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,DI_Player_C.Physics.ConstraintsGroup,DI_Player_C.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,CineCameraComponent.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform,BP_Player_DI_C.TransformCommon.Transform
-BP_Player_DI_C=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,DI_Player_C.Physics.ConstraintsGroup,DI_Player_C.Collision.Collision,CineCameraComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform,BP_Player_DI_C.TransformCommon.Transform,LevelScriptBlueprint.Interfaces.Implemented Interfaces
+EdGraph=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,DI_Player_C.Physics.ConstraintsGroup,DI_Player_C.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,CineCameraComponent.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform,BP_Player_DI_C.TransformCommon.Transform,LevelScriptBlueprint.Interfaces.Implemented Interfaces
+BP_Player_DI_C=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,DI_Player_C.Physics.ConstraintsGroup,DI_Player_C.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,CineCameraComponent.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform,BP_Player_DI_C.TransformCommon.Transform,LevelScriptBlueprint.Interfaces.Implemented Interfaces
 K2Node_VariableGet=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,DI_Player_C.Physics.ConstraintsGroup,DI_Player_C.Collision.Collision,CineCameraComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform,BP_Player_DI_C.TransformCommon.Transform,LevelScriptBlueprint.Interfaces.Implemented Interfaces
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_Move.IA_Move
 InputAction=
@@ -216,7 +216,7 @@ BoxComponent=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCo
 TextRenderComponent=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform
 Ferry_BP_C=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform
 BP_Captail_DI_C=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,DI_Player_C.Physics.ConstraintsGroup,DI_Player_C.Collision.Collision,CineCameraComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform,BP_Player_DI_C.TransformCommon.Transform
-Character=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,DI_Player_C.Physics.ConstraintsGroup,DI_Player_C.Collision.Collision,CineCameraComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform,BP_Player_DI_C.TransformCommon.Transform
+Character=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,DI_Player_C.Physics.ConstraintsGroup,DI_Player_C.Collision.Collision,CineCameraComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform,BP_Player_DI_C.TransformCommon.Transform,LevelScriptBlueprint.Interfaces.Implemented Interfaces
 BillboardComponent=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform
 K2Node_CallFunction=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,DI_Player_C.Physics.ConstraintsGroup,DI_Player_C.Collision.Collision,CineCameraComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform,BP_Player_DI_C.TransformCommon.Transform,LevelScriptBlueprint.Interfaces.Implemented Interfaces
 K2Node=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,DI_Player_C.Physics.ConstraintsGroup,DI_Player_C.Collision.Collision,CineCameraComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform,BP_Player_DI_C.TransformCommon.Transform,LevelScriptBlueprint.Interfaces.Implemented Interfaces
@@ -359,6 +359,7 @@ BP_boss_C=CapsuleComponent.Physics.ConstraintsGroup,DI_BP_Carpenter_C.TransformC
 BP_PlayerStart_DI_C=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform
 K2Node_InputKey=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,DI_Player_C.Physics.ConstraintsGroup,DI_Player_C.Collision.Collision,CineCameraComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform,BP_Player_DI_C.TransformCommon.Transform,LevelScriptBlueprint.Interfaces.Implemented Interfaces
 Landscape=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform
+SaveLocationPoint_C=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,DI_Player_C.Physics.ConstraintsGroup,DI_Player_C.Collision.Collision,CineCameraComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform,BP_Player_DI_C.TransformCommon.Transform,LevelScriptBlueprint.Interfaces.Implemented Interfaces
 
 [EditorStartup]
 LastLevel=/Game/_Level/Island
@@ -396,8 +397,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=WidgetBlueprintEditor
-OpenAssetsAtExit=/Game/_Core/_AdriaanNewShit/SaveSystems/SaveSystem/SaveLocationPoint.SaveLocationPoint
-OpenAssetsAtExit=/Game/_Core/_AdriaanNewShit/Player/BP_Player_DI.BP_Player_DI
 
 [RootWindow]
 ScreenPosition=X=191.000 Y=103.000
